[package]
name = "blessed-regex"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: blessed-regex should not depend on serde, blessed should re-export what's needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
blessed = { path = "../../blessed/blessed" }
inventory = "0.3"
